--- a/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCollectionCell/TimeForecastCollectionCell.xib
+++ b/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCollectionCell/TimeForecastCollectionCell.xib
@@ -13,14 +13,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TimeForecastCollectionCell" id="gTV-IL-0wX" customClass="TimeForecastCollectionCell" customModule="Forecasts" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="168"/>
             <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="150" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="168"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hh" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aK9-1i-HE5">
-                        <rect key="frame" x="0.0" y="11.5" width="150" height="20.5"/>
+                        <rect key="frame" x="0.0" y="19.5" width="150" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20.5" id="KoT-aB-orV"/>
@@ -31,18 +31,26 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cloud" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X46-3K-cjw">
-                        <rect key="frame" x="0.0" y="40" width="150" height="20.5"/>
+                        <rect key="frame" x="0.0" y="48" width="150" height="72"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="WqQ-KU-Yhg"/>
-                            <constraint firstAttribute="height" constant="20.5" id="fg3-3e-1m0"/>
+                            <constraint firstAttribute="height" constant="72" id="fg3-3e-1m0"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t5N-Cq-Ioo">
+                        <rect key="frame" x="39" y="48" width="72" height="72"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="72" id="bcG-GN-5vc"/>
+                            <constraint firstAttribute="width" constant="72" id="fsd-9x-mYb"/>
+                        </constraints>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cº" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDk-7E-1MX">
-                        <rect key="frame" x="0.0" y="68.5" width="150" height="20.5"/>
+                        <rect key="frame" x="0.0" y="128" width="150" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20.5" id="IKP-z9-r0A"/>
@@ -56,6 +64,8 @@
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="t5N-Cq-Ioo" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="5E8-gt-JAL"/>
+                <constraint firstItem="GDk-7E-1MX" firstAttribute="top" secondItem="t5N-Cq-Ioo" secondAttribute="bottom" constant="8" id="8Cc-qp-Ikf"/>
                 <constraint firstItem="X46-3K-cjw" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="8GG-Vg-4Lh"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GDk-7E-1MX" secondAttribute="bottom" constant="8" id="BG2-aP-Ij8"/>
                 <constraint firstItem="X46-3K-cjw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="GRm-fH-0HO"/>
@@ -64,18 +74,21 @@
                 <constraint firstItem="GDk-7E-1MX" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Qxd-0X-Ehz"/>
                 <constraint firstAttribute="trailing" secondItem="aK9-1i-HE5" secondAttribute="trailing" id="Zbf-g0-f06"/>
                 <constraint firstItem="aK9-1i-HE5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="cJg-Ck-6Mp"/>
-                <constraint firstItem="X46-3K-cjw" firstAttribute="top" secondItem="aK9-1i-HE5" secondAttribute="bottom" constant="8" id="cwo-AF-RCL"/>
+                <constraint firstItem="X46-3K-cjw" firstAttribute="top" relation="greaterThanOrEqual" secondItem="aK9-1i-HE5" secondAttribute="bottom" constant="8" id="cwo-AF-RCL"/>
+                <constraint firstItem="t5N-Cq-Ioo" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="hSg-3a-acH"/>
+                <constraint firstItem="t5N-Cq-Ioo" firstAttribute="top" secondItem="aK9-1i-HE5" secondAttribute="bottom" constant="8" id="mrA-uj-WES"/>
                 <constraint firstItem="GDk-7E-1MX" firstAttribute="top" secondItem="X46-3K-cjw" secondAttribute="bottom" constant="8" id="oQ3-R3-wjT"/>
                 <constraint firstAttribute="trailing" secondItem="X46-3K-cjw" secondAttribute="trailing" id="y3Q-Fe-kJ0"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="163" height="12"/>
+            <size key="customSize" width="163" height="80"/>
             <connections>
                 <outlet property="cloudLabel" destination="X46-3K-cjw" id="twC-qs-r0x"/>
                 <outlet property="hourLabel" destination="aK9-1i-HE5" id="xuq-Ur-97z"/>
+                <outlet property="imageHour" destination="t5N-Cq-Ioo" id="4GF-Nx-jR2"/>
                 <outlet property="temprLabel" destination="GDk-7E-1MX" id="3D2-Ot-nNT"/>
             </connections>
-            <point key="canvasLocation" x="144" y="71.064467766116948"/>
+            <point key="canvasLocation" x="144" y="101.64917541229386"/>
         </collectionViewCell>
     </objects>
 </document>
