--- a/Forecasts/Moduls/Weather/AdditionInfoCell/AdditionInfoCell.xib
+++ b/Forecasts/Moduls/Weather/AdditionInfoCell/AdditionInfoCell.xib
@@ -20,8 +20,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8NK-Ae-c10">
-                        <rect key="frame" x="24" y="19" width="272" height="41"/>
+                        <rect key="frame" x="24" y="19" width="272" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l2L-um-nux">
+                        <rect key="frame" x="24" y="47.5" width="272" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -30,15 +36,19 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="8NK-Ae-c10" secondAttribute="trailing" constant="8" id="DHd-X4-m9g"/>
+                    <constraint firstItem="l2L-um-nux" firstAttribute="top" secondItem="8NK-Ae-c10" secondAttribute="bottom" constant="8" id="FH6-HN-HFZ"/>
                     <constraint firstItem="8NK-Ae-c10" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="OVh-I7-MEk"/>
+                    <constraint firstItem="l2L-um-nux" firstAttribute="leading" secondItem="8NK-Ae-c10" secondAttribute="leading" id="U6T-7J-vB8"/>
                     <constraint firstItem="8NK-Ae-c10" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="b0R-3I-GnA"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="8NK-Ae-c10" secondAttribute="bottom" constant="8" id="mxO-t4-the"/>
+                    <constraint firstItem="l2L-um-nux" firstAttribute="width" secondItem="8NK-Ae-c10" secondAttribute="width" id="yGh-v9-wSZ"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="l2L-um-nux" secondAttribute="bottom" constant="8" id="zhL-cq-gEW"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="addInfoLabel" destination="8NK-Ae-c10" id="dU9-fv-2Yv"/>
+                <outlet property="infoFirstLabel" destination="8NK-Ae-c10" id="dU9-fv-2Yv"/>
+                <outlet property="infoSecondLabel" destination="l2L-um-nux" id="IlN-RM-8XV"/>
             </connections>
             <point key="canvasLocation" x="132.80000000000001" y="142.57871064467767"/>
         </tableViewCell>
