--- a/Forecasts/Moduls/Weather/DayForecastCell/DayForecastCell.xib
+++ b/Forecasts/Moduls/Weather/DayForecastCell/DayForecastCell.xib
@@ -12,35 +12,35 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DayForecastCell" rowHeight="163" id="KGk-i7-Jjw" customClass="DayForecastCell" customModule="Forecasts" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="163"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DayForecastCell" rowHeight="120" id="KGk-i7-Jjw" customClass="DayForecastCell" customModule="Forecasts" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="162.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="day" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKj-QJ-DDx">
-                        <rect key="frame" x="24" y="70.5" width="29.5" height="21.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKj-QJ-DDx">
+                        <rect key="frame" x="24" y="60" width="0.0" height="0.0"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cº" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuH-hB-QFC">
-                        <rect key="frame" x="292" y="70.5" width="20" height="21.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuH-hB-QFC">
+                        <rect key="frame" x="312" y="60" width="0.0" height="0.0"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DGu-FD-xvf">
-                        <rect key="frame" x="61.5" y="45.5" width="222.5" height="72"/>
+                        <rect key="frame" x="32" y="42" width="272" height="36"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VK1-ff-BBh">
-                                <rect key="frame" x="75.5" y="0.0" width="72" height="72"/>
+                                <rect key="frame" x="100" y="0.0" width="72" height="36"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="Pva-fL-efq"/>
+                                    <constraint firstAttribute="height" constant="36" id="Pva-fL-efq"/>
                                     <constraint firstAttribute="width" constant="72" id="zM5-HE-m19"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -48,11 +48,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eo6-Kq-jlN">
-                                <rect key="frame" x="75.5" y="0.0" width="72" height="72"/>
+                                <rect key="frame" x="100" y="0.0" width="72" height="36"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="72" id="V7d-V6-lxJ"/>
-                                    <constraint firstAttribute="height" constant="72" id="kpZ-Il-dxB"/>
+                                    <constraint firstAttribute="height" constant="36" id="kpZ-Il-dxB"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -62,7 +62,7 @@
                             <constraint firstItem="VK1-ff-BBh" firstAttribute="centerX" secondItem="DGu-FD-xvf" secondAttribute="centerX" id="F1Y-Bu-ckC"/>
                             <constraint firstItem="eo6-Kq-jlN" firstAttribute="centerY" secondItem="DGu-FD-xvf" secondAttribute="centerY" id="h72-er-67r"/>
                             <constraint firstItem="VK1-ff-BBh" firstAttribute="centerY" secondItem="DGu-FD-xvf" secondAttribute="centerY" id="iYr-kY-pDb"/>
-                            <constraint firstAttribute="height" constant="72" id="qOW-gN-GQL"/>
+                            <constraint firstAttribute="height" constant="36" id="qOW-gN-GQL"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -91,7 +91,7 @@
                 <outlet property="imageDay" destination="eo6-Kq-jlN" id="RH1-M7-lvM"/>
                 <outlet property="tempr" destination="TuH-hB-QFC" id="dVJ-fF-lAC"/>
             </connections>
-            <point key="canvasLocation" x="132.80000000000001" y="180.35982008995504"/>
+            <point key="canvasLocation" x="132.80000000000001" y="160.11994002998503"/>
         </tableViewCell>
     </objects>
 </document>
